fix: z-index for header and logout message

--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -73,6 +73,15 @@ body {
   background-attachment: fixed;
 }
 
+main {
+  position: relative;
+  z-index: 2;
+}
+
+header * {
+ pointer-events: auto;
+}
+
 .header-logo {
   width: 200px;
   height: auto;
@@ -84,8 +93,7 @@ body {
   left: 0;
   right: 0;
   padding: 1rem;
-  z-index: 10
-
+  z-index: -1;
 }
 
 :root {
